test/corpus/appel.txt
================================================================================
test1 - an array type and an array variable
================================================================================

/* an array type and an array variable */
let
	type  arrtype = array of int
	var arr1:arrtype := arrtype [10] of 0
in
	arr1
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier))))
      (variable_dec
        (identifier)
        (type_id
          (identifier))
        (array_expr
          (type_id
            (identifier))
          (int_literal)
          (int_literal))))
    (lvalue
      (identifier))))

================================================================================
test2 - arr1 is valid since expression 0 is int = myint
================================================================================

/* arr1 is valid since expression 0 is int = myint */
let
	type myint = int
	type  arrtype = array of myint

	var arr1:arrtype := arrtype [10] of 0
in
	arr1
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier))))
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier))))
      (variable_dec
        (identifier)
        (type_id
          (identifier))
        (array_expr
          (type_id
            (identifier))
          (int_literal)
          (int_literal))))
    (lvalue
      (identifier))))

================================================================================
test3 - a record type and a record variable
================================================================================

/* a record type and a record variable */
let
	type  rectype = {name:string, age:int}
	var rec1:rectype := rectype {name="Nobody", age=1000}
in
	rec1.name := "Somebody";
	rec1
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (type_dec
        (type_id
          (identifier))
        (type
          (type_fields
            (identifier)
            (type_id
              (identifier))
            (identifier)
            (type_id
              (identifier)))))
      (variable_dec
        (identifier)
        (type_id
          (identifier))
        (record
          (type_id
            (identifier))
          (identifier)
          (string_literal)
          (identifier)
          (int_literal))))
    (assignment
      (lvalue
        (lvalue
          (identifier))
        (identifier))
      (string_literal))
    (lvalue
      (identifier))))

================================================================================
test4 - define a recursive function
================================================================================

/* define a recursive function */
let

/* calculate n! */
function nfactor(n: int): int =
		if  n = 0 
			then 1
			else n * nfactor(n-1)

in
	nfactor(10)
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (comment
      (comment_block))
    (declaration
      (function_dec
        (identifier)
        (type_fields
          (identifier)
          (type_id
            (identifier)))
        (type_id
          (identifier))
        (if_expr
          (compare_expression
            (lvalue
              (identifier))
            (int_literal))
          (int_literal)
          (mul_expression
            (lvalue
              (identifier))
            (function_call
              (identifier)
              (add_expression
                (lvalue
                  (identifier))
                (int_literal)))))))
    (function_call
      (identifier)
      (int_literal))))

================================================================================
test5 - define valid recursive types
================================================================================

/* define valid recursive types */
let
/* define a list */
type intlist = {hd: int, tl: intlist} 

/* define a tree */
type tree ={key: int, children: treelist}
type treelist = {hd: tree, tl: treelist}

var lis:intlist := intlist { hd=0, tl= nil } 

in
	lis
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (comment
      (comment_block))
    (declaration
      (type_dec
        (type_id
          (identifier))
        (type
          (type_fields
            (identifier)
            (type_id
              (identifier))
            (identifier)
            (type_id
              (identifier)))))
      (comment
        (comment_block))
      (type_dec
        (type_id
          (identifier))
        (type
          (type_fields
            (identifier)
            (type_id
              (identifier))
            (identifier)
            (type_id
              (identifier)))))
      (type_dec
        (type_id
          (identifier))
        (type
          (type_fields
            (identifier)
            (type_id
              (identifier))
            (identifier)
            (type_id
              (identifier)))))
      (variable_dec
        (identifier)
        (type_id
          (identifier))
        (record
          (type_id
            (identifier))
          (identifier)
          (int_literal)
          (identifier))))
    (lvalue
      (identifier))))

================================================================================
test6 - define valid mutually recursive procedures
================================================================================

/* define valid mutually recursive procedures */
let

function do_nothing1(a: int, b: string)=
		do_nothing2(a+1)

function do_nothing2(d: int) =
		do_nothing1(d, "str")

in
	do_nothing1(0, "str2")
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (function_dec
        (identifier)
        (type_fields
          (identifier)
          (type_id
            (identifier))
          (identifier)
          (type_id
            (identifier)))
        (function_call
          (identifier)
          (add_expression
            (lvalue
              (identifier))
            (int_literal))))
      (function_dec
        (identifier)
        (type_fields
          (identifier)
          (type_id
            (identifier)))
        (function_call
          (identifier)
          (lvalue
            (identifier))
          (string_literal))))
    (function_call
      (identifier)
      (int_literal)
      (string_literal))))

================================================================================
test7 - define valid mutually recursive functions
================================================================================

/* define valid mutually recursive functions */
let

function do_nothing1(a: int, b: string):int=
		(do_nothing2(a+1);0)

function do_nothing2(d: int):string =
		(do_nothing1(d, "str");" ")

in
	do_nothing1(0, "str2")
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (function_dec
        (identifier)
        (type_fields
          (identifier)
          (type_id
            (identifier))
          (identifier)
          (type_id
            (identifier)))
        (type_id
          (identifier))
        (function_call
          (identifier)
          (add_expression
            (lvalue
              (identifier))
            (int_literal)))
        (int_literal))
      (function_dec
        (identifier)
        (type_fields
          (identifier)
          (type_id
            (identifier)))
        (type_id
          (identifier))
        (function_call
          (identifier)
          (lvalue
            (identifier))
          (string_literal))
        (string_literal)))
    (function_call
      (identifier)
      (int_literal)
      (string_literal))))

================================================================================
test8 - correct if
================================================================================

/* correct if */
if (10 > 20) then 30 else 40	

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (if_expr
    (compare_expression
      (int_literal)
      (int_literal))
    (int_literal)
    (int_literal)))

================================================================================
test9 - error - types of then and else differ
================================================================================

/* error : types of then - else differ */

if (5>4) then 13 else  " "

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (if_expr
    (compare_expression
      (int_literal)
      (int_literal))
    (int_literal)
    (string_literal)))

================================================================================
test10 - error - body of while not unit
================================================================================

/* error : body of while not unit */
while(10 > 5) do 5+6

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (while_expr
    (compare_expression
      (int_literal)
      (int_literal))
    (add_expression
      (int_literal)
      (int_literal))))

================================================================================
test11 - error - hi expr is not int, and index variable erroneously assigned to
================================================================================

/* error hi expr is not int, and index variable erroneously assigned to.  */
for i:=10 to " " do 
	i := i - 1

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (for_expr
    (identifier)
    (int_literal)
    (string_literal)
    (assignment
      (lvalue
        (identifier))
      (add_expression
        (lvalue
          (identifier))
        (int_literal)))))

================================================================================
test12 - valid for and let
================================================================================

/* valid for and let */

let
	var a:= 0
in 
	for i:=0 to 100 do (a:=a+1;())
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (variable_dec
        (identifier)
        (int_literal)))
    (for_expr
      (identifier)
      (int_literal)
      (int_literal)
      (assignment
        (lvalue
          (identifier))
        (add_expression
          (lvalue
            (identifier))
          (int_literal))))))

================================================================================
test13 - error - comparison of incompatible types
================================================================================

/* error: comparison of incompatible types */

3 > "df"

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (compare_expression
    (int_literal)
    (string_literal)))

================================================================================
test14 - error - compare rec with array
================================================================================

/* error : compare rec with array */

let

	type arrtype = array of int
	type rectype = {name:string, id: int}

	var rec := rectype {name="aname", id=0}
	var arr := arrtype [3] of 0

in
	if rec <> arr then 3 else 4
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier))))
      (type_dec
        (type_id
          (identifier))
        (type
          (type_fields
            (identifier)
            (type_id
              (identifier))
            (identifier)
            (type_id
              (identifier)))))
      (variable_dec
        (identifier)
        (record
          (type_id
            (identifier))
          (identifier)
          (string_literal)
          (identifier)
          (int_literal)))
      (variable_dec
        (identifier)
        (array_expr
          (type_id
            (identifier))
          (int_literal)
          (int_literal))))
    (if_expr
      (compare_expression
        (lvalue
          (identifier))
        (lvalue
          (identifier)))
      (int_literal)
      (int_literal))))

================================================================================
test15 - error - if-then returns non unit
================================================================================

/* error : if-then returns non unit */

if 20 then 3

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (if_expr
    (int_literal)
    (int_literal)))

================================================================================
test16 - error - mutually recursive types that do not pass through record or array
================================================================================

/* error: mutually recursive types thet do not pass through record or array */
let 

type a=c
type b=a
type c=d
type d=a

in
 ""
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier))))
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier))))
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier))))
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier)))))
    (string_literal)))

================================================================================
test17 - error - definition of recursive types is interrupted
================================================================================

/* error: definition of recursive types is interrupted */
let
/* define a tree */
type tree ={key: int, children: treelist}
var d:int :=0
type treelist = {hd: tree, tl: treelist}

in
	d
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (comment
      (comment_block))
    (declaration
      (type_dec
        (type_id
          (identifier))
        (type
          (type_fields
            (identifier)
            (type_id
              (identifier))
            (identifier)
            (type_id
              (identifier)))))
      (variable_dec
        (identifier)
        (type_id
          (identifier))
        (int_literal))
      (type_dec
        (type_id
          (identifier))
        (type
          (type_fields
            (identifier)
            (type_id
              (identifier))
            (identifier)
            (type_id
              (identifier))))))
    (lvalue
      (identifier))))

================================================================================
test18 - error - definition of recursive functions is interrupted
================================================================================

/* error : definition of recursive functions is interrupted */
let

function do_nothing1(a: int, b: string):int=
		(do_nothing2(a+1);0)

var d:=0

function do_nothing2(d: int):string =
		(do_nothing1(d, "str");" ")

in
	do_nothing1(0, "str2")
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (function_dec
        (identifier)
        (type_fields
          (identifier)
          (type_id
            (identifier))
          (identifier)
          (type_id
            (identifier)))
        (type_id
          (identifier))
        (function_call
          (identifier)
          (add_expression
            (lvalue
              (identifier))
            (int_literal)))
        (int_literal))
      (variable_dec
        (identifier)
        (int_literal))
      (function_dec
        (identifier)
        (type_fields
          (identifier)
          (type_id
            (identifier)))
        (type_id
          (identifier))
        (function_call
          (identifier)
          (lvalue
            (identifier))
          (string_literal))
        (string_literal)))
    (function_call
      (identifier)
      (int_literal)
      (string_literal))))

================================================================================
test19 - error - second function uses variables local to the first one, undeclared variable
================================================================================

/* error : second function uses variables local to the first one, undeclared variable */
let

function do_nothing1(a: int, b: string):int=
		(do_nothing2(a+1);0)

function do_nothing2(d: int):string =
		(do_nothing1(a, "str");" ")

in
	do_nothing1(0, "str2")
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (function_dec
        (identifier)
        (type_fields
          (identifier)
          (type_id
            (identifier))
          (identifier)
          (type_id
            (identifier)))
        (type_id
          (identifier))
        (function_call
          (identifier)
          (add_expression
            (lvalue
              (identifier))
            (int_literal)))
        (int_literal))
      (function_dec
        (identifier)
        (type_fields
          (identifier)
          (type_id
            (identifier)))
        (type_id
          (identifier))
        (function_call
          (identifier)
          (lvalue
            (identifier))
          (string_literal))
        (string_literal)))
    (function_call
      (identifier)
      (int_literal)
      (string_literal))))

================================================================================
test20 - error - undeclared variable i
================================================================================

/* error: undeclared variable i */

while 10 > 5 do (i+1;())

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (while_expr
    (compare_expression
      (int_literal)
      (int_literal))
    (add_expression
      (lvalue
        (identifier))
      (int_literal))))

================================================================================
test21 - error - procedure returns value and procedure is used in arexpr
================================================================================

/* error : procedure returns value  and procedure is used in arexpr */
let

/* calculate n! */
function nfactor(n: int) =
		if  n = 0 
			then 1
			else n * nfactor(n-1)

in
	nfactor(10)
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (comment
      (comment_block))
    (declaration
      (function_dec
        (identifier)
        (type_fields
          (identifier)
          (type_id
            (identifier)))
        (if_expr
          (compare_expression
            (lvalue
              (identifier))
            (int_literal))
          (int_literal)
          (mul_expression
            (lvalue
              (identifier))
            (function_call
              (identifier)
              (add_expression
                (lvalue
                  (identifier))
                (int_literal)))))))
    (function_call
      (identifier)
      (int_literal))))

================================================================================
test22 - error - field not in record type
================================================================================

/* error : field not in record type */

let 
	type rectype = {name:string , id:int}
	var rec1 := rectype {name="Name", id=0}
in
	rec1.nam := "asd"
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (type_dec
        (type_id
          (identifier))
        (type
          (type_fields
            (identifier)
            (type_id
              (identifier))
            (identifier)
            (type_id
              (identifier)))))
      (variable_dec
        (identifier)
        (record
          (type_id
            (identifier))
          (identifier)
          (string_literal)
          (identifier)
          (int_literal))))
    (assignment
      (lvalue
        (lvalue
          (identifier))
        (identifier))
      (string_literal))))

================================================================================
test23 - error - type mismatch
================================================================================

/* error : type mismatch */

let 
	type rectype = {name:string , id:int}
	var rec1 := rectype {name="aname", id=0}
in
	rec1.name := 3;
	rec1.id := "" 
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (type_dec
        (type_id
          (identifier))
        (type
          (type_fields
            (identifier)
            (type_id
              (identifier))
            (identifier)
            (type_id
              (identifier)))))
      (variable_dec
        (identifier)
        (record
          (type_id
            (identifier))
          (identifier)
          (string_literal)
          (identifier)
          (int_literal))))
    (assignment
      (lvalue
        (lvalue
          (identifier))
        (identifier))
      (int_literal))
    (assignment
      (lvalue
        (lvalue
          (identifier))
        (identifier))
      (string_literal))))

================================================================================
test24 - error - variable not array
================================================================================

/* error : variable not array */
let 
	var d:=0
in
	d[3]
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (variable_dec
        (identifier)
        (int_literal)))
    (lvalue
      (lvalue
        (identifier))
      (int_literal))))

================================================================================
test25 - error - variable not record
================================================================================

/* error : variable not record */
let 
	var d:=0
in
	d.f 
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (variable_dec
        (identifier)
        (int_literal)))
    (lvalue
      (lvalue
        (identifier))
      (identifier))))

================================================================================
test26 - error - integer required
================================================================================

/* error : integer required */

3 + "var"

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (add_expression
    (int_literal)
    (string_literal)))

================================================================================
test27 - locals hide globals
================================================================================

/* locals hide globals */
let
	var a:=0

	function g(a:int):int = a 
in
 g(2)
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (variable_dec
        (identifier)
        (int_literal))
      (function_dec
        (identifier)
        (type_fields
          (identifier)
          (type_id
            (identifier)))
        (type_id
          (identifier))
        (lvalue
          (identifier))))
    (function_call
      (identifier)
      (int_literal))))

================================================================================
test28 - error - different record types
================================================================================

/* error : different record types */

let
	type rectype1 = {name:string , id:int}
	type rectype2 = {name:string , id:int}

	var rec1: rectype1 := rectype2 {name="Name", id=0}
in
	rec1
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (type_dec
        (type_id
          (identifier))
        (type
          (type_fields
            (identifier)
            (type_id
              (identifier))
            (identifier)
            (type_id
              (identifier)))))
      (type_dec
        (type_id
          (identifier))
        (type
          (type_fields
            (identifier)
            (type_id
              (identifier))
            (identifier)
            (type_id
              (identifier)))))
      (variable_dec
        (identifier)
        (type_id
          (identifier))
        (record
          (type_id
            (identifier))
          (identifier)
          (string_literal)
          (identifier)
          (int_literal))))
    (lvalue
      (identifier))))

================================================================================
test29 - error - different array types
================================================================================

/* error : different array types */

let
	type arrtype1 = array of int
	type arrtype2 = array of int

	var arr1: arrtype1 := arrtype2 [10] of 0
in
	arr1
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier))))
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier))))
      (variable_dec
        (identifier)
        (type_id
          (identifier))
        (array_expr
          (type_id
            (identifier))
          (int_literal)
          (int_literal))))
    (lvalue
      (identifier))))

================================================================================
test30 - synonyms are fine
================================================================================

/* synonyms are fine */

let 
		type a = array of int
		type b = a

		var arr1:a := b [10] of 0
in
		arr1[2]
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier))))
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier))))
      (variable_dec
        (identifier)
        (type_id
          (identifier))
        (array_expr
          (type_id
            (identifier))
          (int_literal)
          (int_literal))))
    (lvalue
      (lvalue
        (identifier))
      (int_literal))))

================================================================================
test31 - error - type constraint and init value differ
================================================================================

/* error : type constraint and init value differ */
let 
	var a:int := " "
in
	a
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (variable_dec
        (identifier)
        (type_id
          (identifier))
        (string_literal)))
    (lvalue
      (identifier))))

================================================================================
test32 - error - initializing exp and array type differ
================================================================================

/* error : initializing exp and array type differ */

let
	type arrayty = array of int

	var a := arrayty [10] of " "
in
	0
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier))))
      (variable_dec
        (identifier)
        (array_expr
          (type_id
            (identifier))
          (int_literal)
          (string_literal))))
    (int_literal)))

================================================================================
test33 - error - unknown type
================================================================================

/* error : unknown type */
let
	var a:= rectype {}
in
	0
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (variable_dec
        (identifier)
        (record
          (type_id
            (identifier)))))
    (int_literal)))

================================================================================
test34 - error - formals and actuals have different types
================================================================================

/* error : formals and actuals have different types */
let
	function g (a:int , b:string):int = a
in
	g("one", "two")
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (function_dec
        (identifier)
        (type_fields
          (identifier)
          (type_id
            (identifier))
          (identifier)
          (type_id
            (identifier)))
        (type_id
          (identifier))
        (lvalue
          (identifier))))
    (function_call
      (identifier)
      (string_literal)
      (string_literal))))

================================================================================
test35 - error - formals are more then actuals
================================================================================

/* error : formals are more then actuals */
let
	function g (a:int , b:string):int = a
in
	g("one")
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (function_dec
        (identifier)
        (type_fields
          (identifier)
          (type_id
            (identifier))
          (identifier)
          (type_id
            (identifier)))
        (type_id
          (identifier))
        (lvalue
          (identifier))))
    (function_call
      (identifier)
      (string_literal))))

================================================================================
test36 - error - formals are fewer then actuals
================================================================================

/* error : formals are fewer then actuals */
let
	function g (a:int , b:string):int = a
in
	g(3,"one",5)
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (function_dec
        (identifier)
        (type_fields
          (identifier)
          (type_id
            (identifier))
          (identifier)
          (type_id
            (identifier)))
        (type_id
          (identifier))
        (lvalue
          (identifier))))
    (function_call
      (identifier)
      (int_literal)
      (string_literal)
      (int_literal))))

================================================================================
test37 - redeclaration of variable, the second one hides the first
================================================================================

/* redeclaration of variable; this is legal, there are two different
   variables with the same name.  The second one hides the first.  */
let
	var a := 0
	var a := " "
in
	0
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (variable_dec
        (identifier)
        (int_literal))
      (variable_dec
        (identifier)
        (string_literal)))
    (int_literal)))

================================================================================
test38 - illegal - two types with the same name in one batch of mutually recursive types
================================================================================

/* This is illegal, since there are two types with the same name
    in the same (consecutive) batch of mutually recursive types. 
    See also test47  */
let
	type a = int
	type a = string
in
	0
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier))))
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier)))))
    (int_literal)))

================================================================================
test39 - illegal - two functions with the same name in one batch of mutually recursive functions
================================================================================

/* This is illegal, since there are two functions with the same name
    in the same (consecutive) batch of mutually recursive functions.
   See also test48 */
let
	function g(a:int):int = a
	function g(a:int):int = a
in
	0
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (function_dec
        (identifier)
        (type_fields
          (identifier)
          (type_id
            (identifier)))
        (type_id
          (identifier))
        (lvalue
          (identifier)))
      (function_dec
        (identifier)
        (type_fields
          (identifier)
          (type_id
            (identifier)))
        (type_id
          (identifier))
        (lvalue
          (identifier))))
    (int_literal)))

================================================================================
test40 - error - procedure returns value
================================================================================

/* error : procedure returns value */
let
	function g(a:int) = a
in 
	g(2)
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (function_dec
        (identifier)
        (type_fields
          (identifier)
          (type_id
            (identifier)))
        (lvalue
          (identifier))))
    (function_call
      (identifier)
      (int_literal))))

================================================================================
test41 - local types hide global
================================================================================

/* local types hide global */
let
	type a = int
in
	let
		type a = string
	in
		0
	end
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier)))))
    (let_expr
      (declaration
        (type_dec
          (type_id
            (identifier))
          (type
            (type_id
              (identifier)))))
      (int_literal))))

================================================================================
test42 - correct declarations
================================================================================

/* correct declarations */
let 

type arrtype1 = array of int
type rectype1 = {name:string, address:string, id: int , age: int}
type arrtype2 = array of rectype1
type rectype2 = {name : string, dates: arrtype1}

type arrtype3 = array of string

var arr1 := arrtype1 [10] of 0
var arr2  := arrtype2 [5] of rectype1 {name="aname", address="somewhere", id=0, age=0}
var arr3:arrtype3 := arrtype3 [100] of ""

var rec1 := rectype1 {name="Kapoios", address="Kapou", id=02432, age=44}
var rec2 := rectype2 {name="Allos", dates= arrtype1 [3] of 1900}

in

arr1[0] := 1; 
arr1[9] := 3;
arr2[3].name := "kati";
arr2[1].age := 23;
arr3[34] := "sfd";

rec1.name := "sdf";
rec2.dates[0] := 2323;
rec2.dates[2] := 2323

end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier))))
      (type_dec
        (type_id
          (identifier))
        (type
          (type_fields
            (identifier)
            (type_id
              (identifier))
            (identifier)
            (type_id
              (identifier))
            (identifier)
            (type_id
              (identifier))
            (identifier)
            (type_id
              (identifier)))))
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier))))
      (type_dec
        (type_id
          (identifier))
        (type
          (type_fields
            (identifier)
            (type_id
              (identifier))
            (identifier)
            (type_id
              (identifier)))))
      (type_dec
        (type_id
          (identifier))
        (type
          (type_id
            (identifier))))
      (variable_dec
        (identifier)
        (array_expr
          (type_id
            (identifier))
          (int_literal)
          (int_literal)))
      (variable_dec
        (identifier)
        (array_expr
          (type_id
            (identifier))
          (int_literal)
          (record
            (type_id
              (identifier))
            (identifier)
            (string_literal)
            (identifier)
            (string_literal)
            (identifier)
            (int_literal)
            (identifier)
            (int_literal))))
      (variable_dec
        (identifier)
        (type_id
          (identifier))
        (array_expr
          (type_id
            (identifier))
          (int_literal)
          (string_literal)))
      (variable_dec
        (identifier)
        (record
          (type_id
            (identifier))
          (identifier)
          (string_literal)
          (identifier)
          (string_literal)
          (identifier)
          (int_literal)
          (identifier)
          (int_literal)))
      (variable_dec
        (identifier)
        (record
          (type_id
            (identifier))
          (identifier)
          (string_literal)
          (identifier)
          (array_expr
            (type_id
              (identifier))
            (int_literal)
            (int_literal)))))
    (assignment
      (lvalue
        (lvalue
          (identifier))
        (int_literal))
      (int_literal))
    (assignment
      (lvalue
        (lvalue
          (identifier))
        (int_literal))
      (int_literal))
    (assignment
      (lvalue
        (lvalue
          (lvalue
            (identifier))
          (int_literal))
        (identifier))
      (string_literal))
    (assignment
      (lvalue
        (lvalue
          (lvalue
            (identifier))
          (int_literal))
        (identifier))
      (int_literal))
    (assignment
      (lvalue
        (lvalue
          (identifier))
        (int_literal))
      (string_literal))
    (assignment
      (lvalue
        (lvalue
          (identifier))
        (identifier))
      (string_literal))
    (assignment
      (lvalue
        (lvalue
          (lvalue
            (identifier))
          (identifier))
        (int_literal))
      (int_literal))
    (assignment
      (lvalue
        (lvalue
          (lvalue
            (identifier))
          (identifier))
        (int_literal))
      (int_literal))))

================================================================================
test43 - initialize with unit and causing type mismatch in addition
================================================================================

/* initialize with unit and causing type mismatch in addition */

let 
	var a := ()
in
	a + 3
end

--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_block))
  (let_expr
    (declaration
      (variable_dec
        (identifier)))
    (add_expression
      (lvalue
        (identifier))
      (int_literal))))

================================================================================
test44 - valid nil initialization and assignment
================================================================================

/* valid nil initialization and assignment */
let 

	type rectype = {name:string, id:int}
	var b:rectype := nil

in

	b := nil

end

--------------------------------------------------------------------------------
